# fractured_binary_json

./: .gitignore  README.md  format_specification.md
dart_cli/: pubspec.yaml
frac_json_rust/benchmark/: Cargo.toml
frac_json_rust/benchmark/res/: CouchDB4k.json.zst  MediaContent.json.zst  TwitterTimeline.json.zst  canada.json.zst  citm_catalog.json.zst  reddit_comments_1.json.zst  reddit_comments_100.json.zst  reddit_comments_10k.json.zst  reddit_posts_1.json.zst  reddit_posts_100.json.zst  reddit_posts_10k.json.zst  twitter.json.zst
frac_json_rust/benchmark/src/: main.rs  utils.rs
frac_json_rust/frac_json_node/: .gitignore  .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
frac_json_rust/frac_json_node/.github/workflows/: CI.yml
frac_json_rust/frac_json_node/npm/darwin-arm64/: README.md  package.json
frac_json_rust/frac_json_node/npm/darwin-x64/: README.md  package.json
frac_json_rust/frac_json_node/npm/linux-arm64-gnu/: README.md  package.json
frac_json_rust/frac_json_node/npm/linux-arm64-musl/: README.md  package.json
frac_json_rust/frac_json_node/npm/linux-ia32-gnu/: README.md  package.json
frac_json_rust/frac_json_node/npm/linux-x64-gnu/: README.md  package.json
frac_json_rust/frac_json_node/npm/linux-x64-musl/: README.md  package.json
frac_json_rust/frac_json_node/npm/win32-arm64-msvc/: README.md  package.json
frac_json_rust/frac_json_node/npm/win32-ia32-msvc/: README.md  package.json
frac_json_rust/frac_json_node/npm/win32-x64-msvc/: README.md  package.json
frac_json_rust/frac_json_node/src/: lib.rs
(+57 files in other folders)
