[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frac_json = { path="../frac_json" }
rmp-serde = "1.1.2"
serde = "1.0.197"
serde-smile = "0.2.0"
serde_cbor = "0.11.2"
serde_json = { version = "1.0.113", features = ["preserve_order"] }
serde_ub_json = "0.1.0"
zstd = "0.13.0"
