[package]
edition = "2021"
name = "frac_json_node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
frac_json = { path="../frac_json" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4","serde-json"] }
napi-derive = "2.12.2"
serde_json = { version = "1.0.113", features = ["preserve_order"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
